# asterios_rbs

./: .gitignore  lambdas.tf  pyproject.toml  rss.tf  terraform.tf  variables.tf
.github/workflows/: terraform.yml
lambdas/asterios_rbs/: main.py  pyproject.toml
scripts/: create_pkg.sh
